первая реализация тз 15